--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,6 +46,9 @@ if(WITH_CUDA)
     add_definitions(-DWITH_CUDA)
     # the vector library has a compiled component when using the CUDA backend
     include(ExternalProject)
+    # Turn off annoying and incorrect warnings generated in the JSON file.
+    # We also work around the same issue with the intel compiler.
+    set(CUDA_NVCC_FLAGS ${CUDA_NVCC_FLAGS};-Xcudafe \"--diag_suppress=not_used_in_template_function_params\";-Xcudafe \"--diag_suppress=cast_to_qualified_type\")
     externalproject_add(vector
         PREFIX ${CMAKE_BINARY_DIR}/external
         CMAKE_ARGS "-DCMAKE_INSTALL_PREFIX=${CMAKE_BINARY_DIR}/external"
@@ -121,8 +124,8 @@ if(MODCC_BIN STREQUAL "MODCC_BIN-NOTFOUND")
     set(modcc "${CMAKE_BINARY_DIR}/external/bin/modcc")
 endif()
 
-include_directories(${CMAKE_SOURCE_DIR}/external)
-include_directories(${CMAKE_SOURCE_DIR}/external/tclap/include)
+include_directories(SYSTEM ${CMAKE_SOURCE_DIR}/external)
+include_directories(SYSTEM ${CMAKE_SOURCE_DIR}/external/tclap/include)
 include_directories(${CMAKE_SOURCE_DIR}/include)
 include_directories(${CMAKE_SOURCE_DIR}/src)
 include_directories(${CMAKE_SOURCE_DIR}/miniapp)
