--- a/tests/unit/CMakeLists.txt
+++ b/tests/unit/CMakeLists.txt
@@ -17,19 +17,19 @@ set(TEST_SOURCES
     test_counter.cpp
     test_either.cpp
     test_event_queue.cpp
-    test_fvm.cpp
-    test_fvm_multi.cpp
-    test_cell_group.cpp
+    #CUDA#test_fvm.cpp
+    #CUDA#test_fvm_multi.cpp
+    #CUDA#test_cell_group.cpp
     test_lexcmp.cpp
     test_mask_stream.cpp
     test_matrix.cpp
-    test_mechanisms.cpp
+    #CUDA#test_mechanisms.cpp
     test_nop.cpp
     test_optional.cpp
     test_parameters.cpp
     test_partition.cpp
     test_point.cpp
-    test_probe.cpp
+    #CUDA#test_probe.cpp
     test_segment.cpp
     test_range.cpp
     test_span.cpp
@@ -37,17 +37,24 @@ set(TEST_SOURCES
     test_spike_store.cpp
     test_stimulus.cpp
     test_swcio.cpp
-    test_synapses.cpp
+    #CUDA#test_synapses.cpp
     test_tree.cpp
     test_transform.cpp
     test_uninitialized.cpp
+    test_vector.cpp
 
     # unit test driver
     test.cpp
 )
 
 add_definitions("-DDATADIR=\"${CMAKE_SOURCE_DIR}/data\"")
-add_executable(test.exe ${TEST_SOURCES} ${HEADERS})
+
+if(WITH_CUDA)
+    cuda_add_executable(test.exe ${TEST_SOURCES} ${HEADERS})
+    target_link_libraries(test.exe gpu)
+else()
+    add_executable(test.exe ${TEST_SOURCES} ${HEADERS})
+endif()
 
 set(TARGETS test.exe)
 
