Moved over modcc unit tests.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,4 +1,3 @@
-
 # google test framework
 add_library(gtest gtest-all.cpp)
 # tests look for gtest.h here
@@ -17,13 +16,14 @@ add_subdirectory(global_communication)
 # Tests for performance: This could include stand alone tests. These do not necessarily be run automatically
 add_subdirectory(performance)
 
+# modcc tests
+add_subdirectory(modcc)
 
 # Proposed additional test types:
 
 # Large test, employing the full simulator. validated using deltas on output data
 
-# Test to check integration between components 
+# Test to check integration between components
 
 
 # Numbered tests based on bugs in the tracker
-
