Can't std::sort on forward iterators.
But GNU libstc++ tries to anyway, hilarious segfaults
ensue.

* Don't try and sort a sentinel-terminated range.
* Instead provide a `strict_view` that walks a range
  (if required) and presents a range with a proper
  end iterator.
* Tests, const range (but non-const iterator) implementations.

--- a/tests/unit/CMakeLists.txt
+++ b/tests/unit/CMakeLists.txt
@@ -1,13 +1,3 @@
-set(HEADERS
-    ${PROJECT_SOURCE_DIR}/src/cell.hpp
-    ${PROJECT_SOURCE_DIR}/src/cell_tree.hpp
-    ${PROJECT_SOURCE_DIR}/src/math.hpp
-    ${PROJECT_SOURCE_DIR}/src/point.hpp
-    ${PROJECT_SOURCE_DIR}/src/segment.hpp
-    ${PROJECT_SOURCE_DIR}/src/swcio.hpp
-    ${PROJECT_SOURCE_DIR}/src/tree.hpp
-)
-
 set(TEST_SOURCES
     # unit tests
     test_algorithms.cpp
@@ -47,7 +37,7 @@ set(TEST_SOURCES
 )
 
 add_definitions("-DDATADIR=\"${CMAKE_SOURCE_DIR}/data\"")
-add_executable(test.exe ${TEST_SOURCES} ${HEADERS})
+add_executable(test.exe ${TEST_SOURCES})
 
 set(TARGETS test.exe)
 
