update modcc to latest modparser trunk
* update the out of date version of modparser was added to the repository
* fix some warnings about unused static functions in a modcc test header
* move modcc/src path contents to modcc, because there was little point having
  the additional sub directory.

--- a/modcc/CMakeLists.txt
+++ b/modcc/CMakeLists.txt
@@ -1,6 +1,27 @@
-# generated .a and .so go into /lib
-set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
-set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
+set(MODCC_SOURCES
+    token.cpp
+    lexer.cpp
+    expression.cpp
+    parser.cpp
+    textbuffer.cpp
+    cprinter.cpp
+    functionexpander.cpp
+    functioninliner.cpp
+    cudaprinter.cpp
+    expressionclassifier.cpp
+    constantfolder.cpp
+    errorvisitor.cpp
+    module.cpp
+)
 
-add_subdirectory(src)
+add_library(compiler ${MODCC_SOURCES})
+
+add_executable(modcc modcc.cpp)
+
+target_link_libraries(modcc LINK_PUBLIC compiler)
+
+set_target_properties(modcc
+    PROPERTIES
+    RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/modcc"
+)
 
