--- a/tests/unit/CMakeLists.txt
+++ b/tests/unit/CMakeLists.txt
@@ -15,19 +15,18 @@ set(TEST_SOURCES
     test_counter.cpp
     test_either.cpp
     test_event_queue.cpp
-    #CUDA#test_fvm.cpp
-    #CUDA#test_fvm_multi.cpp
-    #CUDA#test_cell_group.cpp
+    test_fvm_multi.cpp
+    test_cell_group.cpp
     test_lexcmp.cpp
     test_mask_stream.cpp
     test_matrix.cpp
-    #CUDA#test_mechanisms.cpp
+    test_mechanisms.cpp
     test_nop.cpp
     test_optional.cpp
     test_parameters.cpp
     test_partition.cpp
     test_point.cpp
-    #CUDA#test_probe.cpp
+    test_probe.cpp
     test_segment.cpp
     test_range.cpp
     test_span.cpp
@@ -35,7 +34,7 @@ set(TEST_SOURCES
     test_spike_store.cpp
     test_stimulus.cpp
     test_swcio.cpp
-    #CUDA#test_synapses.cpp
+    test_synapses.cpp
     test_tree.cpp
     test_transform.cpp
     test_uninitialized.cpp
