--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -88,6 +88,16 @@ else()
     set(use_external_modcc ON BOOL)
 endif()
 
+# whether to attempt to use nrniv to build validation data
+# (if we find nrniv, do)
+find_program(NRNIV_BIN nrniv)
+if(NRNIV_BIN STREQUAL "NRNIV_BIN-NOTFOUND")
+    message(STATUS "nrniv not found; will not automatically build validation data sets")
+    set(BUILD_VALIDATION_DATA FALSE)
+else()
+    set(BUILD_VALIDATION_DATA TRUE)
+endif()
+
 include_directories(${CMAKE_SOURCE_DIR}/tclap/include)
 include_directories(${CMAKE_SOURCE_DIR}/vector)
 include_directories(${CMAKE_SOURCE_DIR}/include)
@@ -104,6 +114,7 @@ if(use_external_modcc)
     add_subdirectory(modcc)
 endif()
 add_subdirectory(mechanisms)
+add_subdirectory(nrn)
 add_subdirectory(src)
 add_subdirectory(tests)
 add_subdirectory(miniapp)
