Reorganize validation data generation
* Move generation and data to top-level validation directory.
* Make BUILD_VALIDATION_DATA and VALIDATION_DATA_DIR cache vars.
* Add helper CMake functions for data generation.

Note `validation/ref/numeric/foo.sh` is just a placeholder.

--- a/tests/validation/CMakeLists.txt
+++ b/tests/validation/CMakeLists.txt
@@ -12,8 +12,9 @@ set(VALIDATION_SOURCES
     validate.cpp
 )
 
-add_definitions("-DDATADIR=\"${CMAKE_SOURCE_DIR}/data\"")
-
+if(VALIDATION_DATA_DIR)
+    add_definitions("-DDATADIR=\"${VALIDATION_DATA_DIR}\"")
+endif()
 add_executable(validate.exe ${VALIDATION_SOURCES} ${HEADERS})
 
 set(TARGETS validate.exe)
@@ -36,7 +37,7 @@ foreach(target ${TARGETS})
         RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/tests"
     )
 
-    if (BUILD_VALIDATION_DATA)
+    if(BUILD_VALIDATION_DATA)
 	add_dependencies(${target} validation_data)
     endif()
 endforeach()
