Refactor convergence tests; add numeric soma ref.
* Amend data directory path in validation tests.
* Enmodulate `hh_soma.jl`
* Add HH channel reference data generations script.
* Switch `validate_soma.cpp` to numeric reference data.
* Consolidate common code in `validate_ball_and_stick.cpp`
* Add (nearly) Rallpack1 validation test (see below).
* Gentle failure on absence of reference data in
  `validate_ball_and_stick.cpp`

Can't yet override mechanism default parameter values,
so the cable cell model added to `test_common_cells.hpp`
lets the default stand; validation script will have
to use the default membrane conductance rather than that
given by Rallpack1.

--- a/validation/ref/numeric/CMakeLists.txt
+++ b/validation/ref/numeric/CMakeLists.txt
@@ -1,4 +1,7 @@
 # note: function add_validation_data defined in validation/CMakeLists.txt
 
-# placeholder
-add_validation_data(OUTPUT foo.out DEPENDS foo.sh COMMAND bash foo.sh)
+add_validation_data(
+    OUTPUT numeric_soma.json
+    DEPENDS numeric_soma.jl HHChannels.jl
+    COMMAND julia numeric_soma.jl)
+
