--- a/validation/ref/numeric/CMakeLists.txt
+++ b/validation/ref/numeric/CMakeLists.txt
@@ -5,3 +5,7 @@ add_validation_data(
     DEPENDS numeric_soma.jl HHChannels.jl
     COMMAND julia numeric_soma.jl)
 
+add_validation_data(
+    OUTPUT numeric_rallpack1.json
+    DEPENDS numeric_rallpack1.jl PassiveCable.jl
+    COMMAND julia numeric_rallpack1.jl)
