--- a/validation/ref/numeric/CMakeLists.txt
+++ b/validation/ref/numeric/CMakeLists.txt
@@ -1,11 +1,13 @@
 # note: function add_validation_data defined in validation/CMakeLists.txt
 
-add_validation_data(
-    OUTPUT numeric_soma.json
-    DEPENDS numeric_soma.jl HHChannels.jl
-    COMMAND julia numeric_soma.jl)
+if(BUILD_JULIA_VALIDATION_DATA)
+    add_validation_data(
+        OUTPUT numeric_soma.json
+        DEPENDS numeric_soma.jl HHChannels.jl
+        COMMAND ${JULIA_BIN} numeric_soma.jl)
 
-add_validation_data(
-    OUTPUT numeric_rallpack1.json
-    DEPENDS numeric_rallpack1.jl PassiveCable.jl
-    COMMAND julia numeric_rallpack1.jl)
+    add_validation_data(
+        OUTPUT numeric_rallpack1.json
+        DEPENDS numeric_rallpack1.jl PassiveCable.jl
+        COMMAND ${JULIA_BIN} numeric_rallpack1.jl)
+endif()
