--- a/tests/validation/CMakeLists.txt
+++ b/tests/validation/CMakeLists.txt
@@ -19,7 +19,7 @@ add_executable(validate.exe ${VALIDATION_SOURCES} ${HEADERS})
 set(TARGETS validate.exe)
 
 foreach(target ${TARGETS})
-    target_link_libraries(${target} LINK_PUBLIC cellalgo gtest)
+    target_link_libraries(${target} LINK_PUBLIC nestmc gtest)
 
     if(WITH_TBB)
         target_link_libraries(${target} LINK_PUBLIC ${TBB_LIBRARIES})
