Extend range, view functionality.
* New `filter` view: lazily selects based on predicate.
* Generic `front` and `back` for sequences.
* New rangeutil STL wrappers `stable_sort_by`, `all_of`, `any_of`.
* Consolidate common utility unit testing structures into
  `tests/unit/common.hpp`

--- a/tests/unit/CMakeLists.txt
+++ b/tests/unit/CMakeLists.txt
@@ -7,6 +7,7 @@ set(TEST_SOURCES
     test_counter.cpp
     test_either.cpp
     test_event_queue.cpp
+    test_filter.cpp
     test_fvm.cpp
     test_fvm_multi.cpp
     test_cell_group.cpp
