Add `ball_and_squiggle` model; fix `ball_and_taper`.
* Make `test_common_cells.hpp` and `ball_and_taper.py` agree.
* Add `ball_and_squiggle` model that has a tapering undulating
  profile.

--- a/validation/ref/neuron/CMakeLists.txt
+++ b/validation/ref/neuron/CMakeLists.txt
@@ -3,6 +3,7 @@
 set(models
      ball_and_stick
      ball_and_3stick
+     ball_and_squiggle
      ball_and_taper
      simple_exp_synapse
      simple_exp2_synapse
