clean up gpu branch changes
* streamline CMake
  * list of external libaries to link against CMake is concatenated in
    `EXTERNAL_LIBRARIES` variable
  * UNWIND_STACK is enabled by default if the libunwind package can be found
* stack trace printer
  * optionally prints with color
  * takes the executable to perform address translation as command line argument
* added documentation to c++, in particular some comments in fvm_multicell.hpp to
  explain some steps in more detail.

--- a/miniapp/CMakeLists.txt
+++ b/miniapp/CMakeLists.txt
@@ -18,19 +18,14 @@ else()
     add_executable(miniapp.exe ${MINIAPP_SOURCES} ${HEADERS})
 endif()
 
-target_link_libraries(miniapp.exe LINK_PUBLIC nestmc)
+set(aaa nestmc)
 
-if(WITH_TBB)
-    target_link_libraries(miniapp.exe LINK_PUBLIC ${TBB_LIBRARIES})
-endif()
+target_link_libraries(miniapp.exe LINK_PUBLIC nestmc)
+target_link_libraries(miniapp.exe LINK_PUBLIC ${EXTERNAL_LIBRARIES})
 
 if(WITH_MPI)
     target_link_libraries(miniapp.exe LINK_PUBLIC ${MPI_C_LIBRARIES})
     set_property(TARGET miniapp.exe APPEND_STRING PROPERTY LINK_FLAGS "${MPI_C_LINK_FLAGS}")
-endif()
-
-if(WITH_UNWIND)
-    target_link_libraries(miniapp.exe LINK_PUBLIC ${UNWIND_LIBRARIES})
 endif()
 
 set_target_properties(miniapp.exe
