--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -25,6 +25,7 @@ add_library(nestmc ${BASE_SOURCES} ${HEADERS})
 add_dependencies(nestmc build_all_mods)
 if(WITH_CUDA)
     cuda_add_library(gpu ${CUDA_SOURCES})
+    set(NESTMC_LIBRARIES ${NESTMC_LIBRARIES} gpu)
     add_dependencies(gpu build_all_gpu_mods)
 endif()
 
