Rewriter for KINETIC schemes (WIP)
* Move common functinality for 'local' variable insertion during
  transformation phase to new files `astmanip.?pp`.
* Add Expression method for directly setting scope.
* Use `scope_ptr` type alias widely.
* Implement correct `clone()` behaviour for `DerivativeExpression`
* Implementation `KineticRewriter` transforming visitor class.
* Add test for `KineticRewriter` (incomplete).

--- a/modcc/CMakeLists.txt
+++ b/modcc/CMakeLists.txt
@@ -1,17 +1,18 @@
 set(MODCC_SOURCES
-    token.cpp
-    lexer.cpp
-    expression.cpp
-    parser.cpp
-    textbuffer.cpp
+    astmanip.cpp
+    constantfolder.cpp
     cprinter.cpp
+    cudaprinter.cpp
+    errorvisitor.cpp
+    expression.cpp
+    expressionclassifier.cpp
     functionexpander.cpp
     functioninliner.cpp
-    cudaprinter.cpp
-    expressionclassifier.cpp
-    constantfolder.cpp
-    errorvisitor.cpp
+    lexer.cpp
     module.cpp
+    parser.cpp
+    textbuffer.cpp
+    token.cpp
 )
 
 add_library(compiler ${MODCC_SOURCES})
