Symbolic GE prototype WIP

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -186,6 +186,7 @@ endif()
 
 add_subdirectory(mechanisms)
 add_subdirectory(src)
+add_subdirectory(proto)
 add_subdirectory(tests)
 add_subdirectory(miniapp)
 
